# pyportrait

./: AUTHORS.md  HISTORY.md  README.md  environment-dev.yml  environment.yml  requirements.txt  setup.cfg
pyportrait/: __init__.py  traits.py
tests/: test_traits.py
